static/style.css
:root {
    --main-bg-color: #FFFFFF; /* White */
    --secondary-bg-color: #F2F6F6; /* Light Blush */
    --accent-bg-color: #DED6E0; /* Pale Lavender */
    --main-prim-color: #2D232E; /* Raisin Black */
    --highlight-color: #9D6381; /* China Rose */
    --secondary-accent: #B88CA0; /* Muted Mauve */
    --dark-accent: #4A444E; /* Charcoal Gray */
    --highlight-hover: #D1B27C; /* Soft Gold */
    --cool-accent: #768CA3; /* Slate Blue */
    --text-color: #2D232E; /* Raisin Black */
    
    --border-color: #091717;
    --title: #091717;
    --subtitle: #091717;
    --title-background: #0073AE;
    --article-text: #091717;
    --interact_color: #006D55;
    --button-color: #006D55;
    --footer-color: #1C4644 ;
}

.subtitle {
    text-align: center;
    margin-top: 5px; /* Adjust spacing as needed */
    margin-bottom: 5px; /* Adjust spacing as needed */
}
.subtitle h2 {
    font-size: 36px; /* Match "Working Paper" font size */
    font-weight: bold;
    color: var(--subtitle); /* Deep blue color */
    text-decoration: underline;
    text-decoration-color: var(--subtitle); /* Vibrant orange underline */
    text-decoration-thickness: 3px; /* Underline thickness */
    text-underline-offset: 5px; /* Space between text and underline */
}

.title {
    text-align: center;
}
.title h2 {
    font-size: 60px; /* Match "Working Paper" font size */
    font-weight: bold;
    color: var(--title); /* Deep blue color */
    text-decoration: underline;
    text-decoration-color: var(--title); /* Vibrant orange underline */
    text-decoration-thickness: 3px; /* Underline thickness */
    text-underline-offset: 5px; /* Space between text and underline */
}

welcome-title {
    font-size: 36px; /* Match "Working Paper" font size */
    font-weight: bold;
    color: var(--subtitle); /* Deep blue color */
    text-decoration: underline;
    text-decoration-color: var(--subtitle); /* Vibrant orange underline */
    text-decoration-thickness: 3px; /* Underline thickness */
    text-underline-offset: 5px; /* Space between text and underline */
    padding-bottom:0px;
}


body {
    font-family: 'Garamond', serif;
    padding-top: 80px;
    background-color: var(--main-bg-color);
    color: var(--secondary-text-color);
    margin: 0;
}


.header {
    background-color: var(--main-bg-color); /* Light and transparent */
    position: fixed;
    width: 100%;
    top: 0;
    left: 0;
    display: flex;
    justify-content: space-between;
    align-items: center;
    z-index: 100;
    padding: 10px 10px;
    border-bottom: 1px solid var(--border-color);
    transition: border-bottom 0.2s ease;
    
}


/* Navigation Styles */
.navigation ul {
    list-style: none;
    padding: 0;
    margin: 0;
    display: flex;
    margin-right: 20px;
}

.navigation li {
    margin-right: 20px;
    padding: 10px;
    transition: transform 0.3s ease, box-shadow 0.3s ease; /* Smooth transition for moving and shadow */
}

.navigation a {
    text-decoration: none;
    color: var(--secondary-text-color);
    font-size: 24px;
    display: block;
    padding: 5px 10px;
    transition: color 0.3s ease, border 0.3s ease;
    box-sizing: border-box; /* New Addition */
    font-family: 'Lato';

}

.navigation li:hover {
    color: var(--main-prim-color);
    background-color: var(--shaded-background-color);

}

.navigation a:hover {
    color: var(--main-prim-color);
    text-decoration: underline;
    padding: 0px 10px; /* Adjusted padding */

}


.name {
    font-size: 36px;
    font-weight: bold;

    color: var(--main-prim-color);
    font-family: 'Parisienne';
    text-decoration: none;
}

/* Header Content */
.header-content {
    display: flex;
    justify-content: center;
    align-items: center;
        font-family: 'Lato';

}

.header-content-section {
    color: var(--main-prim-color); /* Font color */
        font-family: 'Lato';

}

.navigation a {
    display: flex;
    align-items: center;  /* Vertically center the items */
    gap: 10px;            /* Add space between the icon and the text */
}


.profile-section {
    display: flex;
    align-items: flex-start;
}

.profile-photo img {
    width: 250px;
    height: auto;
    margin-top: 90px;
    margin-right: 50px;
    margin-left:425px;
    box-shadow: 0 4px 8px rgba(0, 0, 0, .5); /* Optional: Add some shadow */

}

.right-section {
    
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    margin-right:300px;

}


.welcome-note p {
    font-family:'Garamond';
    font-size: 18px;
    padding-top: 0px;   
}

.contact-info h2 {
    font-weight: bold;
    margin: 20px 0 10px;
}

.contact-info p {
    margin: 5px 0;
    font-family:'Garamond';    
    
}
.recent-projects-section {
   background-color: var(--secondary-bg-color);
    margin-top:10px;
    padding: 40px 20px;
    text-align: center;
    position: relative; /* Make this container a positioned element */
}

.recent-projects-subtitle h2 {
    font-size: 36px; /* Match "Working Paper" font size */
    font-weight: bold;
    color: var(--subtitle); /* Deep blue color */
    text-decoration-thickness: 3px; /* Underline thickness */
    text-underline-offset: 5px; /* Space between text and underline */
    font-family:'Lato';
}


.projects-container {
    display: flex;
    justify-content: center; /* Center the boxes */
    flex-wrap: wrap; /* Ensure boxes wrap on smaller screens */
    margin: 0 50px; /* Move the boxes closer together */
    position: relative; /* Ensure arrows are positioned relative to this container */
}

.article-box a:hover img {
    opacity: 0.5; /* Lighter image on hover */
}
/* ... */

